<resources>

    <string name="app_name">helplawyer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <color name="white">#ffffff</color>
    <string name="users">БД Пользователи</string>
    <string name="footer">designed by Dmitry Boytsov</string>
    <string name="userss">Клиенты</string>
    <string name="title_users">БД Пользователи</string>
    <string name="title_main">Органайзер Юриста</string>
    <string name="title_documents">БД Документы</string>
    <string name="title_knowledge">БД Знания</string>
    <string name="documents">Документы</string>
    <string name="knowledge">Знания</string>
    <string name="report">Отчеты</string>
    <string name="remember">Напоминание</string>
    <string name="notice">Заметки</string>
    <string name="dialog">Диалог</string>
    <string name="law">Суд</string>
    <string name="konsplus">Консультант+</string>
<style name="TextFontHorizontal">
        <item name="android:textSize">15sp</item>
        <item name="android:lineSpacingMultiplier">1.1</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textStyle">bold</item>
    </style> 
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="bithday">Дата рождения</string>
    <string name="address">Адрес</string>
    <string name="phone">Номер телефона</string>
    <string name="ok">Ok</string>
    <string name="profile">Профиль</string>
    <string name="hello">Пробник</string>
    <string name="delete_record">Удалить запись</string>
    <string name="add">Добавить пользователя</string>
    
 
 </resources>