<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:overScrollMode="never"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:overScrollMode="always"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/editBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="108dp"
        android:ems="10"
        android:inputType="date"
        android:overScrollMode="always"
        android:text="@string/bithday" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/buttonReturnDBUsMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="34dp"
        android:layout_x="3dp"
        android:layout_y="368dp"
        android:background="@color/white"
        android:onClick="ClickUserBDReturn"
        android:src="@drawable/back1" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="215dp"
        android:layout_y="134dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="216dp"
        android:layout_y="185dp"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="148dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:overScrollMode="always"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="188dp"
        android:ems="10"
        android:inputType="phone"
        android:overScrollMode="always"
        android:text="@string/phone" />

</AbsoluteLayout>